<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/texture_background"
    tools:context=".MainActivity">
    /<!--/imported a pretty background and assigned the xml file to the main activity

    //important guidelines which will help android app support multiple sizes and keep all the content on the screen.
    -->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vguide_left3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04136253" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vguide_right3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96107054" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vguide_mid3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hguide_zero3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hguide_fifty3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hguide_twentyfive3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hguide_seventyfive3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hguide_hundred3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="1.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.21" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />
    //main message to user

    <TextView
        android:id="@+id/msg_begin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_horizontal"
        android:text="@string/msg_begin"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toStartOf="@+id/vguide_right3"
        app:layout_constraintStart_toStartOf="@+id/vguide_left3"
        app:layout_constraintTop_toTopOf="@+id/hguide_zero3" />

    //login button

    // register button

    <Button
        android:id="@+id/login_btn"
        android:layout_width="304dp"
        android:layout_height="29dp"
        android:background="@color/medium_slate_blue"
        android:enabled="false"
        android:text="@string/s2_login_btn"
        android:textColor="@color/cornsilk"
        app:layout_constraintBottom_toTopOf="@+id/reg_btn"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/hguide_fifty3"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/reg_btn"
        android:layout_width="304dp"
        android:layout_height="30dp"
        android:layout_marginBottom="24dp"
        android:background="@color/medium_slate_blue"
        android:text="@string/s2_reg_btn"
        android:textColor="@color/cornsilk"
        app:layout_constraintBottom_toTopOf="@+id/hguide_seventyfive3"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline4" />

    <TextView
        android:id="@+id/pwd_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="60dp"
        android:text="@string/s2_login_label2"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="@+id/name_lbl"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/name_lbl"
        app:layout_constraintTop_toBottomOf="@+id/name_lbl"
        app:layout_constraintVertical_bias="0.24" />

    <TextView
        android:id="@+id/name_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/s2_login_label1"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/inputnames"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="@+id/vguide_left3"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <TextView
        android:id="@+id/msg_makeacct"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/msg_makeacct"
        android:textColorHighlight="#FFEB3B"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/hguide_hundred3"
        app:layout_constraintEnd_toStartOf="@+id/vguide_right3"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="@+id/vguide_left3"
        app:layout_constraintTop_toTopOf="@+id/hguide_seventyfive3"
        app:layout_constraintVertical_bias="0.226" />

    <EditText
        android:id="@+id/inputpwd1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="16dp"
        android:ems="10"
        android:hint="@string/s2_login_input2"
        android:inputType="textPassword"
        app:layout_constraintBaseline_toBaselineOf="@+id/pwd_lbl"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline4" />

    <EditText
        android:id="@+id/inputnames"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:ems="10"
        android:hint="@string/s2_login_input1"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/name_lbl"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.87" />

</androidx.constraintlayout.widget.ConstraintLayout>